# ChangeLog for net-nntp/lottanzb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
03 Jan 2010; Lars Tobias Børsting <larstobi@snota.no>
  lottanzb-0.5.2.ebuild:
  - Added dev-python/kiwi to RDEPEND

05 Sep 2009; Lars Tobias Børsting <larstobi@snota.no>
  +lottanzb-0.5_beta.ebuild:
  - Version bump 0.5_beta

09 Jul 2008; Thomas Kuther <gimpel@sonnenkinder.org>
  +lottanzb-0.4.1.ebuild:
  - Version bump 0.4.1

  09 Jul 2008; Thomas Kuther <gimpel@sonnenkinder.org>
  +lottanzb-0.3.1.ebuild:
  - add changelog - version bump 0.3.1 - remove xdg commands from setup.py
