@@ -4,5 +4,5 @@ DIST lottanzb-0.5.tar.gz 4010800 RMD160 03b04eb8011c3f4f48b48bcc9ac2b6d82851174a
 EBUILD lottanzb-0.5.2.ebuild 804 RMD160 36d596793a862c7ed7c04f5931a172799977eb26 SHA1 29f1f906298a60b534634184bfcdf0925fe0292d SHA256 de6ac95c58351239b24d7937a16505fa94f31e181de42eb7aad884f889649654
 EBUILD lottanzb-0.5.ebuild 773 RMD160 125ceb9cd4cc5045f73fa756f9f045361278736b SHA1 743ba3966de06c076b73874cc4b14482035bf3cc SHA256 0f2b7bf0cb97b1d7116d049c0489db18dafa20b37284018f5de2bedf979f37a3
 EBUILD lottanzb-9999.ebuild 795 RMD160 dac9a44b399d74b2f3bba01aea5a36682978d074 SHA1 bc4871bc3e2b14115675ea923d99fcd98cc6d447 SHA256 e9a78be0e464c29dd318caae1183bedda49a59faae38f8afcb3412e50de53f04
-MISC ChangeLog 593 RMD160 332e6defe84b59aaf63c79f6cf10e6892182ac89 SHA1 f098bc711c73457137ee222a617483f5cabf3801 SHA256 600491528f6854bfd42bf759ab131fd3d43317778c4f710a213e187025f3b375
+MISC ChangeLog 627 RMD160 037dc608568cf730a11d3fd4a50f2badac9c4ea2 SHA1 cae72f23f5cfce13df5595b4f222593c014b75ad SHA256 b4a852940103ac54d27941994116cfdf24a8ca39288b2c5ce3b0391c3c281444
 MISC metadata.xml 268 RMD160 265039b09c28b0d77be7ea0453e6351a3e59fb5f SHA1 64039dc76f96179ac4a6ff7c7928a1e9ad70f08e SHA256 9720d65d2d91b19f1f91720b659bd4fc24d17c7c5adee943beb408538609e5eb
